[gd_scene load_steps=9 format=3 uid="uid://chqrobp8pk7c8"]

[ext_resource type="Script" uid="uid://dqgk3nvernq4l" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://bhn7p2quks1k0" path="res://Assets/ENEMY-removebg-preview (1).png" id="1_hghv2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("1_hghv2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_hghv2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_hghv2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_hghv2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghaa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hghv2"]
size = Vector2(20, 27)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -26)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_ghaa6")
autoplay = "default"
frame_progress = 0.849326

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_hghv2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RayCast2DRight" type="RayCast2D" parent="."]
target_position = Vector2(23, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
